syntax = "proto3";

package proto;

message DeliveryChatroomMessageCommand {
  string RoomID = 1;
  string SenderID = 2;
  string SenderFirstName = 3;
  string SenderLastName = 4;
  bytes Data = 5;
}